# advent_of_code_2018

./: .gitignore  .gitmodules  .mergify.yml  Day 3 : Part 1 using Numpy  README.md
JedB-python/: A0C18-day1.py  day1
aelg-haskell/: .correct-out  .gitignore  LICENSE  README.md  package.yaml  save-out.sh  test.sh
delda-php/: README.md  composer.json
digidis-go/: README.md
digimatic-c++/: .gitignore  CMakeLists.txt  README.md
digimatic-c++/Day01/: CMakeLists.txt  day01.cpp
digimatic-c++/Day02/: main.cpp
digimatic-c++/Day03/: main.cpp
digimatic-c++/Day04/: main.cpp
digimatic-c++/Day05/: main.cpp
digimatic-c++/Day06/: main.cpp
digimatic-c++/Day07/: input.txt  main.cpp
digimatic-c++/Day08/: main.cpp
digimatic-c++/Day09/: input.txt  main.cpp
digimatic-c++/Day0x/: main.cpp
digimatic-c++/Day10/: main.cpp
digimatic-c++/Day11/: main.cpp
digimatic-c++/Day12/: input.txt  main.cpp
digimatic-c++/Day13/: input.txt  main.cpp
digimatic-c++/Day14/: main.cpp
digimatic-c++/Day15/: input.txt  main.cpp
digimatic-c++/Day16/: input.txt  main.cpp
digimatic-c++/Day17/: input.txt  main.cpp
digimatic-c++/Day18/: main.cpp
digimatic-c++/Day19/: .Untitled-1.txt  main.cpp
digimatic-c++/Day20/: main.cpp
digimatic-c++/Day21/: input.txt  main.cpp
digimatic-c++/Day22/: main.cpp
digimatic-c++/Day23/: input.txt  main.cpp
digimatic-c++/Day24/: main.cpp
digimatic-c++/Day25/: main.cpp
digimatic-c++/common/: common.h
dlofstrom-brainfuck/: day1p1.bf  day1p1.py
dlofstrom-python/: .gitignore  README.md  day1.py  day10.in  day10.py  day11.py  day12.py  day13.py  day14.py  day15.in  day15.py  day16.py  day17.in  day17.py  day18.py  day19.py  day2.py  day20.in  day20.py  day21.py  day22.py  day23.py  day24.py  day25.in  day25.py  day3.py  day4.py  day5.py  day6.in  day6.py  day7.py  day8.in  day8.py  day9.in  day9.py
dmatrix-python/: .gitignore
emlun-clojure/: README.md  project.clj
erikdyrelius-polyglot/: Project1.lpi  Project1.lps  Project1.pas  README.md  day01.txt  day02.lsp  day02.txt  day05.c  day05.txt  day08.java  day09.cpp  day14.nim
erikdyrelius-python/: README.md  aocbase.py  day01.py  day02.py  day02.txt  day03.py  day03.txt  day04.py  day04.txt  day05.py  day06.py  day07.py  day07.txt  day08.py  day09.py  day09.txt  day10.py  day10.txt  day11.py  day12.py  day12.txt  day13.py  (+25 more)
f00ale-cpp/: CMakeLists.txt
f00ale-cpp/data/: p04.txt  p05.txt  p06.txt  p09.txt  p10.txt  p12.txt  p13.txt  p14.txt  p15.txt  p17.txt  p18.txt  p19.txt  p21.txt  p22.txt  p23.txt  p24.txt
f00ale-cpp/src/: p01.cpp  p02.cpp  p03.cpp  p04.cpp  p05.cpp  p06.cpp  p07.cpp  p08.cpp  p09.cpp  p10.cpp  p11.cpp  p12.cpp  p13.cpp  p14.cpp  p15.cpp  p16.cpp  p17.cpp  p18.cpp  p19.cpp  p20.cpp  p21.cpp  p22.cpp  p23.cpp  p24.cpp  p25.cpp  template.cpp
(+1009 files in other folders)
